# enahopy

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CI_CD_ACTIVATION_COMPLETE.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_FINAL_SUMMARY.md  COVERAGE_ML_EXCLUSION_DECISION.md  COVERAGE_PHASE_2_SUMMARY.md  COVERAGE_PROGRESS_REPORT.md  COVERAGE_SESSION_2025-11-16.md  COVERAGE_SESSION_2025-11-16_FINAL_SUMMARY.md  COVERAGE_SESSION_2025-11-16_PHASE2_ANALYSIS.md  COVERAGE_SESSION_COMPLETE_2025-11-16.md  COVERAGE_SESSION_SUMMARY.md  FINAL_COVERAGE_REPORT.md  LICENSE  MANIFEST.in  QUICK_WINS_COMPLETION_SUMMARY.md  README.md  STATUS.md  TEST_COVERAGE_SESSION_2025-11-12.md  __init__.py  build_and_upload.py  pyproject.toml  requirements.txt  setup.py
.enaho_cache/: metadata.json
assets/: README.md
enahopy/: __init__.py  cli.py  data_quality.py  exceptions.py  logging.py  merger_analysis.py  merger_analysis_report.txt  reporting.py  statistical_analysis.py  validation.py  version.py
examples/: tutorial_01_loader.ipynb  tutorial_02_merger.ipynb  tutorial_03_null_analysis.ipynb  tutorial_04_pipeline_completo.ipynb
merger/: config.py  convenience.py  core.py  exceptions.py
null_analysis/: __init__.py  config.py  convenience.py  exceptions.py
tests/: __init__.py  analyze_coverage.py  benchmark_refactoring.py  benchmark_results.json  conftest.py  pytest.ini  requirements-test.txt  run_tests.py  setup_test.py  test_advanced_null_analysis.py  test_basic.py  test_core_cache.py  test_downloader_errors.py  test_enahopy_init.py  test_exceptions.py  test_geographic_merger.py  test_geographic_patterns.py  test_geographic_validators.py  test_imports.py  (+42 more)
(+137 files in other folders)
